syntax = "proto3";
package protocol;
option csharp_namespace = "Protocol.Protobuf";

message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Transform {
  Vector3 position = 1;
  Vector3 scale = 2;
  Vector3 eulerAngles = 3;
}